apps/appflowy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appflowy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appflowy
  template:
    metadata:
      labels:
        app: appflowy
        appflowy-db: "true"
    spec:
      nodeSelector:
        kubernetes.io/hostname: vps
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: postgres
          image: ankane/pgvector:latest
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/postgresql/data
              subPath: appflowy/db
        - name: appflowy
          image: appflowyinc/appflowy_cloud:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
              subPath: appflowy/config
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
