apps/appflowy/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appflowy-db-service
spec:
  selector:
    appflowy-db: "true"
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
