apps/appflowy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appflowy-service
spec:
  selector:
    app: appflowy
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
