apps/appflowy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appflowy-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: appflowy.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appflowy-service
                port:
                  number: 8000
  tls:
    - hosts:
        - appflowy.${DOMAIN}
      secretName: appflowy-tls
